--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ruby-symbol-search",
   "displayName": "Ruby Symbol Search",
   "description": "Effortlessly explore and pinpoint Ruby symbols in your codebase with lightning-fast precision.",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "icon": "logo.png",
   "publisher": "vscode-bkaz",
   "repository": {
@@ -23,11 +23,11 @@
     "commands": [
       {
         "command": "rubySymbolSearch.index",
-        "title": "Index Ruby Files"
+        "title": "Ruby Symbol Search: Index Files"
       },
       {
         "command": "rubySymbolSearch.search",
-        "title": "Search Ruby Symbols"
+        "title": "Ruby Symbol Search: Search Symbols"
       }
     ],
     "keybindings": [
