--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/bk-az/ruby-symbol-search"
   },
   "engines": {
-    "vscode": "^1.0.0"
+    "vscode": "^1.85.0"
   },
   "categories": [
     "Programming Languages"
@@ -32,8 +32,12 @@
     "languages": [
       {
         "id": "ruby",
-        "extensions": [".rb"],
-        "aliases": ["Ruby"]
+        "extensions": [
+          ".rb"
+        ],
+        "aliases": [
+          "Ruby"
+        ]
       }
     ],
     "commands": [
@@ -98,7 +102,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
-    "@types/vscode": "^1.96.0",
+    "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "@vscode/test-cli": "^0.0.10",
